# ponylab-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai/: __init__.py  analyze.py
camera/: __init__.py  capture.py
config/plants/: tomato.csv
data/: __init__.py  models.py  yieldizer.py
data/plants/: tomato.csv
logic/: __init__.py  control.py  rules.py
logs/: __init__.py  plant_log.py  trace.py
server/: __init__.py  config.py  main.py  proxy.py
server/snapshots/: cfg.json  state.json
